--- a/build.gradle
+++ b/build.gradle
@@ -77,7 +77,7 @@ jar {
 }
 
 dependencies {
-    compile 'tools.profiler:async-profiler:1.8.3'
+//    compile 'tools.profiler:async-profiler:1.8.3'
     compile 'com.github.oshi:oshi-core:5.5.1'
     compile 'org.apache.httpcomponents.client5:httpclient5:5.0.3'
     compile 'com.eclipsesource.minimal-json:minimal-json:0.9.5'
